--- a/1. source/Test and run functions.ipynb
+++ b/1. source/Test and run functions.ipynb
@@ -14,6 +14,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "ed488845",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Jfunc_cython_v4'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\Dropbox\\FFTLog\\Diogo_work\\1. Code\\2. Python_Cython\\python-integer-power-project\\1. source\\B411Red_jfunc_cython_v1.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mJfunc_cython_v4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcomputeJ\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mJ\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mgmpy2\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mgm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mgmpy2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'Jfunc_cython_v4'"
+     ]
+    }
+   ],
+   "source": [
+    "%run -i \"B411Red_jfunc_cython_v1.py\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "8ee2b6d5",
    "metadata": {
