simplified num_three_pow

--- a/1. source/Test and run functions.ipynb
+++ b/1. source/Test and run functions.ipynb
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "999ab5f7",
+   "id": "6c03dea8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
     {
      "data": {
       "text/plain": [
-       "(None, <pyximport.pyximport.PyxImporter at 0x7f3c5425c2d0>)"
+       "(None, <pyximport.pyximport.PyxImporter at 0x7ff4442162d0>)"
       ]
      },
      "execution_count": 3,
@@ -44,20 +44,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2db18df9",
+   "execution_count": 9,
+   "id": "03f3ad44",
    "metadata": {},
    "outputs": [],
    "source": [
     "import Jfunc_cython_v4\n",
+    "from Jfunc_cython_v4 import computeJ as J\n",
     "import numpy as np\n",
     "import os\n",
     "import sys\n",
     "from functools import lru_cache\n",
     "import pandas as pd\n",
-    "from Jfunc_cython_v4 import computeJ as J\n",
+    "\n",
+    "from B222_jfunc_cython_v1 import compute_all_B222\n",
     "\n",
     "from babiscython_v4_ubuntu import Ltrian as L\n",
+    "from babiscython_v4_ubuntu import BubN\n",
     "import gmpy2 as gm\n",
     "from gmpy2 import *\n",
     "import time"
@@ -65,28 +68,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "6b23d0a6",
+   "execution_count": 10,
+   "id": "18e46e2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kpeak1 = -0.034\n",
+    "kpeak2 = -0.001\n",
+    "kpeak3 = -0.000076\n",
+    "kpeak4 = -0.0000156\n",
+    "kuv1 = 0.069\n",
+    "kuv2 = 0.0082\n",
+    "kuv3 = 0.0013\n",
+    "kuv4 = 0.0000135\n",
+    "kpeak1 = mpfr(str(kpeak1))\n",
+    "kpeak2 = mpfr(str(kpeak2))\n",
+    "kpeak3 = mpfr(str(kpeak3))\n",
+    "kpeak4 = mpfr(str(kpeak4))\n",
+    "kuv1 = mpfr(str(kuv1))\n",
+    "kuv2 = mpfr(str(kuv2))\n",
+    "kuv3 = mpfr(str(kuv3))\n",
+    "kuv4 = mpfr(str(kuv4))\n",
+    "\n",
+    "mass1 = -kpeak1 - 1j*kuv1\n",
+    "mass1conj = -kpeak1 + 1j*kuv1\n",
+    "mass2 = -kpeak2 - 1j*kuv2\n",
+    "mass2conj = -kpeak2 + 1j*kuv2\n",
+    "mass3 = -kpeak3 - 1j*kuv3\n",
+    "mass3conj = -kpeak3 + 1j*kuv3\n",
+    "mass4 = -kpeak4 - 1j*kuv4\n",
+    "mass4conj = -kpeak4 + 1j*kuv4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "52ef6dfe",
    "metadata": {},
    "outputs": [],
    "source": [
     "k21 = mpfr(1.6)\n",
     "k22 = mpfr(1.3)\n",
-    "k23 = mpfr(1.1)\n",
+    "k23 = mpfr(1.09)\n",
     "\n",
-    "n1 = -4\n",
+    "n1 = -3\n",
     "n2 = 2\n",
     "n3 = 1\n",
     "\n",
     "d1=2\n",
-    "d2=2\n",
-    "d3=2"
+    "d2=3\n",
+    "d3=2\n",
+    "\n",
+    "m1=mass1\n",
+    "m2=mass2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "2daff566",
+   "execution_count": 7,
+   "id": "0ee728d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,20 +137,358 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5af3bfe6",
+   "execution_count": 8,
+   "id": "3ed2ebfc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " "
+      " time: 0.3749408721923828\n"
      ]
     }
    ],
    "source": [
-    "%prun -s cumulative test_J()"
+    "start_time = time.time()\n",
+    "%prun -s cumulative test_J()\n",
+    "print(\"time:\", time.time()-start_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "28a37fb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00581559 0.00581559 0.00581559\n",
+      "0.00586051 0.00586051 0.00586051\n",
+      "0.005 0.005 0.005\n",
+      "0.00676422 0.00676422 0.00676422\n",
+      "0.00686912 0.00686912 0.00686912\n",
+      "0.00786758 0.00786758 0.00786758\n",
+      "0.00805131 0.00805131 0.00805131\n",
+      "0.00915093 0.00915093 0.00915093\n",
+      "0.00943696 0.00943696 0.00943696\n",
+      "0.0106436 0.0106436 0.0106436\n",
+      "0.0110611 0.0110611 0.0110611\n",
+      "0.0123798 0.0123798 0.0123798\n",
+      "0.0129647 0.0129647 0.0129647\n",
+      "0.0143991 0.0143991 0.0143991\n",
+      "0.015196 0.015196 0.015196\n",
+      "0.0167479 0.0167479 0.0167479\n",
+      "0.0178112 0.0178112 0.0178112\n",
+      "0.0194798 0.0194798 0.0194798\n",
+      "0.0208766 0.0208766 0.0208766\n",
+      "0.0226573 0.0226573 0.0226573\n",
+      "0.0244695 0.0244695 0.0244695\n",
+      "0.0263531 0.0263531 0.0263531\n",
+      "0.0286808 0.0286808 0.0286808\n",
+      "0.0306518 0.0306518 0.0306518\n",
+      "0.0336168 0.0336168 0.0336168\n",
+      "0.0356516 0.0356516 0.0356516\n",
+      "0.0394023 0.0394023 0.0394023\n",
+      "0.041467 0.041467 0.041467\n",
+      "0.0461835 0.0461835 0.0461835\n",
+      "0.0482311 0.0482311 0.0482311\n",
+      "0.0541318 0.0541318 0.0541318\n",
+      "0.0560984 0.0560984 0.0560984\n",
+      "0.0634481 0.0634481 0.0634481\n",
+      "0.0652491 0.0652491 0.0652491\n",
+      "0.0743676 0.0743676 0.0743676\n",
+      "0.0758924 0.0758924 0.0758924\n",
+      "0.0871664 0.0871664 0.0871664\n",
+      "0.0882718 0.0882718 0.0882718\n",
+      "0.102168 0.102168 0.102168\n",
+      "0.102671 0.102671 0.102671\n",
+      "0.119418 0.119418 0.119418\n",
+      "0.119751 0.119751 0.119751\n",
+      "0.138897 0.138897 0.138897\n",
+      "0.140361 0.140361 0.140361\n",
+      "0.161554 0.161554 0.161554\n",
+      "0.164517 0.164517 0.164517\n",
+      "0.187906 0.187906 0.187906\n",
+      "0.192831 0.192831 0.192831\n",
+      "0.218557 0.218557 0.218557\n",
+      "0.226018 0.226018 0.226018\n",
+      "0.254208 0.254208 0.254208\n",
+      "0.264916 0.264916 0.264916\n",
+      "0.295674 0.295674 0.295674\n",
+      "0.310508 0.310508 0.310508\n",
+      "0.343903 0.343903 0.343903\n",
+      "0.363948 0.363948 0.363948\n",
+      "0.426584 0.426584 0.426584\n",
+      "0.4 0.4 0.4\n",
+      "0.5 0.5 0.5\n",
+      "15 15\n",
+      "14 15\n",
+      "13 15\n",
+      "12 15\n",
+      "11 15\n",
+      "10 15\n",
+      "9 15\n",
+      "8 15\n",
+      "7 15\n",
+      "6 15\n",
+      "5 15\n",
+      "4 15\n",
+      "3 15\n",
+      "2 15\n",
+      "1 15\n",
+      "0 15\n",
+      "15 14\n",
+      "14 14\n",
+      "13 14\n",
+      "12 14\n",
+      "11 14\n",
+      "10 14\n",
+      "9 14\n",
+      "8 14\n",
+      "7 14\n",
+      "6 14\n",
+      "5 14\n",
+      "4 14\n",
+      "3 14\n",
+      "2 14\n",
+      "1 14\n",
+      "0 14\n",
+      "15 13\n",
+      "14 13\n",
+      "13 13\n",
+      "12 13\n",
+      "11 13\n",
+      "10 13\n",
+      "9 13\n",
+      "8 13\n",
+      "7 13\n",
+      "6 13\n",
+      "5 13\n",
+      "4 13\n",
+      "3 13\n",
+      "2 13\n",
+      "1 13\n",
+      "0 13\n",
+      "15 12\n",
+      "14 12\n",
+      "13 12\n",
+      "12 12\n",
+      "11 12\n",
+      "10 12\n",
+      "9 12\n",
+      "8 12\n",
+      "7 12\n",
+      "6 12\n",
+      "5 12\n",
+      "4 12\n",
+      "3 12\n",
+      "2 12\n",
+      "1 12\n",
+      "0 12\n",
+      "15 11\n",
+      "14 11\n",
+      "13 11\n",
+      "12 11\n",
+      "11 11\n",
+      "10 11\n",
+      "9 11\n",
+      "8 11\n",
+      "7 11\n",
+      "6 11\n",
+      "5 11\n",
+      "4 11\n",
+      "3 11\n",
+      "2 11\n",
+      "1 11\n",
+      "0 11\n",
+      "15 10\n",
+      "14 10\n",
+      "13 10\n",
+      "12 10\n",
+      "11 10\n",
+      "10 10\n",
+      "9 10\n",
+      "8 10\n",
+      "7 10\n",
+      "6 10\n",
+      "5 10\n",
+      "4 10\n",
+      "3 10\n",
+      "2 10\n",
+      "1 10\n",
+      "0 10\n",
+      "15 9\n",
+      "14 9\n",
+      "13 9\n",
+      "12 9\n",
+      "11 9\n",
+      "10 9\n",
+      "9 9\n",
+      "8 9\n",
+      "7 9\n",
+      "6 9\n",
+      "5 9\n",
+      "4 9\n",
+      "3 9\n",
+      "2 9\n",
+      "1 9\n",
+      "0 9\n",
+      "15 8\n",
+      "14 8\n",
+      "13 8\n",
+      "12 8\n",
+      "11 8\n",
+      "10 8\n",
+      "9 8\n",
+      "8 8\n",
+      "7 8\n",
+      "6 8\n",
+      "5 8\n",
+      "4 8\n",
+      "3 8\n",
+      "2 8\n",
+      "1 8\n",
+      "0 8\n",
+      "15 7\n",
+      "14 7\n",
+      "13 7\n",
+      "12 7\n",
+      "11 7\n",
+      "10 7\n",
+      "9 7\n",
+      "8 7\n",
+      "7 7\n",
+      "6 7\n",
+      "5 7\n",
+      "4 7\n",
+      "3 7\n",
+      "2 7\n",
+      "1 7\n",
+      "0 7\n",
+      "15 6\n",
+      "14 6\n",
+      "13 6\n",
+      "12 6\n",
+      "11 6\n",
+      "10 6\n",
+      "9 6\n",
+      "8 6\n",
+      "7 6\n",
+      "6 6\n",
+      "5 6\n",
+      "4 6\n",
+      "3 6\n",
+      "2 6\n",
+      "1 6\n",
+      "0 6\n",
+      "15 5\n",
+      "14 5\n",
+      "13 5\n",
+      "12 5\n",
+      "11 5\n",
+      "10 5\n",
+      "9 5\n",
+      "8 5\n",
+      "7 5\n",
+      "6 5\n",
+      "5 5\n",
+      "4 5\n",
+      "3 5\n",
+      "2 5\n",
+      "1 5\n",
+      "0 5\n",
+      "15 4\n",
+      "14 4\n",
+      "13 4\n",
+      "12 4\n",
+      "11 4\n",
+      "10 4\n",
+      "9 4\n",
+      "8 4\n",
+      "7 4\n",
+      "6 4\n",
+      "5 4\n",
+      "4 4\n",
+      "3 4\n",
+      "2 4\n",
+      "1 4\n",
+      "0 4\n",
+      "15 3\n",
+      "14 3\n",
+      "13 3\n",
+      "12 3\n",
+      "11 3\n",
+      "10 3\n",
+      "9 3\n",
+      "8 3\n",
+      "7 3\n",
+      "6 3\n",
+      "5 3\n",
+      "4 3\n",
+      "3 3\n",
+      "2 3\n",
+      "1 3\n",
+      "0 3\n",
+      "15 2\n",
+      "14 2\n",
+      "13 2\n",
+      "12 2\n",
+      "11 2\n",
+      "10 2\n",
+      "9 2\n",
+      "8 2\n",
+      "7 2\n",
+      "6 2\n",
+      "5 2\n",
+      "4 2\n",
+      "3 2\n",
+      "2 2\n",
+      "1 2\n",
+      "0 2\n",
+      "15 1\n",
+      "14 1\n",
+      "13 1\n",
+      "12 1\n",
+      "11 1\n",
+      "10 1\n",
+      "9 1\n",
+      "8 1\n",
+      "7 1\n",
+      "6 1\n",
+      "5 1\n",
+      "4 1\n",
+      "3 1\n",
+      "2 1\n",
+      "1 1\n",
+      "0 1\n",
+      "15 0\n",
+      "14 0\n",
+      "13 0\n",
+      "12 0\n",
+      "11 0\n",
+      "10 0\n",
+      "9 0\n",
+      "8 0\n",
+      "7 0\n",
+      "6 0\n",
+      "5 0\n",
+      "4 0\n",
+      "3 0\n",
+      "2 0\n",
+      "1 0\n",
+      "0 0\n",
+      "--- 45.95927286148071 seconds ---\n",
+      " time: 46.03009796142578\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_time = time.time()\n",
+    "%prun -s cumulative compute_all_B222()\n",
+    "print(\"time:\", time.time()-start_time)"
    ]
   },
   {
@@ -120,13 +498,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "J(0,0,0,2,1,0,1,0,0)"
+    "J(0,0,0,2,1,0,k21,k22,k23)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24295fd9",
+   "id": "898caacc",
    "metadata": {},
    "outputs": [],
    "source": []
