added all the possible cases for computeJ

--- a/1. source/Test and run functions.ipynb
+++ b/1. source/Test and run functions.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "id": "fe07436b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1802599887.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipykernel_4689/1802599887.py\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    cimport cython\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext Cython\n",
     "\n",
@@ -88,6 +79,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "1e9f0ba1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from B222_jfunc_cython_v1 import compute_all_B222"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "9a57ff80",
    "metadata": {},
    "outputs": [
@@ -352,14 +353,12 @@
       "2 0\n",
       "1 0\n",
       "0 0\n",
-      "--- 31.727293729782104 seconds ---\n",
-      " time: 31.740308046340942\n"
+      "--- 36.6001660823822 seconds ---\n",
+      " time: 36.6140570640564\n"
      ]
     }
    ],
    "source": [
-    "from B222_jfunc_cython_v1 import compute_all_B222\n",
-    "\n",
     "start_time = time.time()\n",
     "%prun -s cumulative compute_all_B222()\n",
     "print(\"time:\", time.time()-start_time)"
@@ -367,276 +366,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "182cbc45",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5 0.5 0.5\n",
-      "15 15\n",
-      "14 15\n",
-      "13 15\n",
-      "12 15\n",
-      "11 15\n",
-      "10 15\n",
-      "9 15\n",
-      "8 15\n",
-      "7 15\n",
-      "6 15\n",
-      "5 15\n",
-      "4 15\n",
-      "3 15\n",
-      "2 15\n",
-      "1 15\n",
-      "0 15\n",
-      "15 14\n",
-      "14 14\n",
-      "13 14\n",
-      "12 14\n",
-      "11 14\n",
-      "10 14\n",
-      "9 14\n",
-      "8 14\n",
-      "7 14\n",
-      "6 14\n",
-      "5 14\n",
-      "4 14\n",
-      "3 14\n",
-      "2 14\n",
-      "1 14\n",
-      "0 14\n",
-      "15 13\n",
-      "14 13\n",
-      "13 13\n",
-      "12 13\n",
-      "11 13\n",
-      "10 13\n",
-      "9 13\n",
-      "8 13\n",
-      "7 13\n",
-      "6 13\n",
-      "5 13\n",
-      "4 13\n",
-      "3 13\n",
-      "2 13\n",
-      "1 13\n",
-      "0 13\n",
-      "15 12\n",
-      "14 12\n",
-      "13 12\n",
-      "12 12\n",
-      "11 12\n",
-      "10 12\n",
-      "9 12\n",
-      "8 12\n",
-      "7 12\n",
-      "6 12\n",
-      "5 12\n",
-      "4 12\n",
-      "3 12\n",
-      "2 12\n",
-      "1 12\n",
-      "0 12\n",
-      "15 11\n",
-      "14 11\n",
-      "13 11\n",
-      "12 11\n",
-      "11 11\n",
-      "10 11\n",
-      "9 11\n",
-      "8 11\n",
-      "7 11\n",
-      "6 11\n",
-      "5 11\n",
-      "4 11\n",
-      "3 11\n",
-      "2 11\n",
-      "1 11\n",
-      "0 11\n",
-      "15 10\n",
-      "14 10\n",
-      "13 10\n",
-      "12 10\n",
-      "11 10\n",
-      "10 10\n",
-      "9 10\n",
-      "8 10\n",
-      "7 10\n",
-      "6 10\n",
-      "5 10\n",
-      "4 10\n",
-      "3 10\n",
-      "2 10\n",
-      "1 10\n",
-      "0 10\n",
-      "15 9\n",
-      "14 9\n",
-      "13 9\n",
-      "12 9\n",
-      "11 9\n",
-      "10 9\n",
-      "9 9\n",
-      "8 9\n",
-      "7 9\n",
-      "6 9\n",
-      "5 9\n",
-      "4 9\n",
-      "3 9\n",
-      "2 9\n",
-      "1 9\n",
-      "0 9\n",
-      "15 8\n",
-      "14 8\n",
-      "13 8\n",
-      "12 8\n",
-      "11 8\n",
-      "10 8\n",
-      "9 8\n",
-      "8 8\n",
-      "7 8\n",
-      "6 8\n",
-      "5 8\n",
-      "4 8\n",
-      "3 8\n",
-      "2 8\n",
-      "1 8\n",
-      "0 8\n",
-      "15 7\n",
-      "14 7\n",
-      "13 7\n",
-      "12 7\n",
-      "11 7\n",
-      "10 7\n",
-      "9 7\n",
-      "8 7\n",
-      "7 7\n",
-      "6 7\n",
-      "5 7\n",
-      "4 7\n",
-      "3 7\n",
-      "2 7\n",
-      "1 7\n",
-      "0 7\n",
-      "15 6\n",
-      "14 6\n",
-      "13 6\n",
-      "12 6\n",
-      "11 6\n",
-      "10 6\n",
-      "9 6\n",
-      "8 6\n",
-      "7 6\n",
-      "6 6\n",
-      "5 6\n",
-      "4 6\n",
-      "3 6\n",
-      "2 6\n",
-      "1 6\n",
-      "0 6\n",
-      "15 5\n",
-      "14 5\n",
-      "13 5\n",
-      "12 5\n",
-      "11 5\n",
-      "10 5\n",
-      "9 5\n",
-      "8 5\n",
-      "7 5\n",
-      "6 5\n",
-      "5 5\n",
-      "4 5\n",
-      "3 5\n",
-      "2 5\n",
-      "1 5\n",
-      "0 5\n",
-      "15 4\n",
-      "14 4\n",
-      "13 4\n",
-      "12 4\n",
-      "11 4\n",
-      "10 4\n",
-      "9 4\n",
-      "8 4\n",
-      "7 4\n",
-      "6 4\n",
-      "5 4\n",
-      "4 4\n",
-      "3 4\n",
-      "2 4\n",
-      "1 4\n",
-      "0 4\n",
-      "15 3\n",
-      "14 3\n",
-      "13 3\n",
-      "12 3\n",
-      "11 3\n",
-      "10 3\n",
-      "9 3\n",
-      "8 3\n",
-      "7 3\n",
-      "6 3\n",
-      "5 3\n",
-      "4 3\n",
-      "3 3\n",
-      "2 3\n",
-      "1 3\n",
-      "0 3\n",
-      "15 2\n",
-      "14 2\n",
-      "13 2\n",
-      "12 2\n",
-      "11 2\n",
-      "10 2\n",
-      "9 2\n",
-      "8 2\n",
-      "7 2\n",
-      "6 2\n",
-      "5 2\n",
-      "4 2\n",
-      "3 2\n",
-      "2 2\n",
-      "1 2\n",
-      "0 2\n",
-      "15 1\n",
-      "14 1\n",
-      "13 1\n",
-      "12 1\n",
-      "11 1\n",
-      "10 1\n",
-      "9 1\n",
-      "8 1\n",
-      "7 1\n",
-      "6 1\n",
-      "5 1\n",
-      "4 1\n",
-      "3 1\n",
-      "2 1\n",
-      "1 1\n",
-      "0 1\n",
-      "15 0\n",
-      "14 0\n",
-      "13 0\n",
-      "12 0\n",
-      "11 0\n",
-      "10 0\n",
-      "9 0\n",
-      "8 0\n",
-      "7 0\n",
-      "6 0\n",
-      "5 0\n",
-      "4 0\n",
-      "3 0\n",
-      "2 0\n",
-      "1 0\n",
-      "0 0\n",
-      "--- 24.90849757194519 seconds ---\n",
-      "time: 24.911592721939087\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "start_time = time.time()\n",
     "compute_all_B222()\n",
@@ -645,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "913129dc",
    "metadata": {},
    "outputs": [],
@@ -657,28 +390,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "fbebf5e7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "mpfr('5.5048450728144016969163686251969806907734658805829044539e-16',190)"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gamma(mpfr('0.1'))-gamma(0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "0cbbff13",
    "metadata": {},
    "outputs": [],
@@ -689,102 +411,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "id": "fa547e77",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Error compiling Cython file:\n",
-      "------------------------------------------------------------\n",
-      "...\n",
-      "coef_dim_gen_cache = {}\n",
-      "cpdef mpfr coef_dim_gen(long long expnum, long long expden):\n",
-      "     ^\n",
-      "------------------------------------------------------------\n",
-      "\n",
-      "/home/diogo/.cache/ipython/cython/_cython_magic_cdaa20cad920f38e35d00092dfe731a5.pyx:2:6: 'mpfr' is not a type identifier\n",
-      "\n",
-      "Error compiling Cython file:\n",
-      "------------------------------------------------------------\n",
-      "...\n",
-      "        return 0 \n",
-      "    if expden > 1:\n",
-      "        if (expnum,expden) in coef_dim_gen_cache:\n",
-      "            return coef_dim_gen_cache[(expnum,expden)]\n",
-      "        else:\n",
-      "            val = (coef_dim_gen(expnum, expden-1)*(5 - 2*expden + 2*expnum))/(2 - 2*expden)\n",
-      "                                                                           ^\n",
-      "------------------------------------------------------------\n",
-      "\n",
-      "/home/diogo/.cache/ipython/cython/_cython_magic_cdaa20cad920f38e35d00092dfe731a5.pyx:15:76: Compiler crash in AnalyseExpressionsTransform\n",
-      "\n",
-      "ModuleNode.body = StatListNode(_cython_magic_cdaa20cad920f38e35d00092dfe731a5.pyx:1:0)\n",
-      "StatListNode.stats[1] = CFuncDefNode(_cython_magic_cdaa20cad920f38e35d00092dfe731a5.pyx:2:6,\n",
-      "    args = [...]/2,\n",
-      "    modifiers = [...]/0,\n",
-      "    overridable = 1,\n",
-      "    visibility = 'private')\n",
-      "File 'Nodes.py', line 436, in analyse_expressions: StatListNode(_cython_magic_cdaa20cad920f38e35d00092dfe731a5.pyx:3:4)\n",
-      "File 'Nodes.py', line 6261, in analyse_expressions: IfStatNode(_cython_magic_cdaa20cad920f38e35d00092dfe731a5.pyx:11:4)\n",
-      "File 'Nodes.py', line 6327, in analyse_expressions: IfClauseNode(_cython_magic_cdaa20cad920f38e35d00092dfe731a5.pyx:11:7,\n",
-      "    is_terminator = True)\n",
-      "File 'Nodes.py', line 436, in analyse_expressions: StatListNode(_cython_magic_cdaa20cad920f38e35d00092dfe731a5.pyx:12:8,\n",
-      "    is_terminator = True)\n",
-      "File 'Nodes.py', line 6263, in analyse_expressions: IfStatNode(_cython_magic_cdaa20cad920f38e35d00092dfe731a5.pyx:12:8,\n",
-      "    is_terminator = True)\n",
-      "File 'Nodes.py', line 436, in analyse_expressions: StatListNode(_cython_magic_cdaa20cad920f38e35d00092dfe731a5.pyx:15:12,\n",
-      "    is_terminator = True)\n",
-      "File 'Nodes.py', line 5178, in analyse_expressions: SingleAssignmentNode(_cython_magic_cdaa20cad920f38e35d00092dfe731a5.pyx:15:76)\n",
-      "File 'Nodes.py', line 5298, in analyse_types: SingleAssignmentNode(_cython_magic_cdaa20cad920f38e35d00092dfe731a5.pyx:15:76)\n",
-      "File 'ExprNodes.py', line 11045, in analyse_types: DivNode(_cython_magic_cdaa20cad920f38e35d00092dfe731a5.pyx:15:76,\n",
-      "    ctruedivision = True,\n",
-      "    infix = True,\n",
-      "    operator = '/',\n",
-      "    result_is_used = True,\n",
-      "    truedivision = True,\n",
-      "    use_managed_ref = True)\n",
-      "File 'ExprNodes.py', line 11537, in analyse_operation: DivNode(_cython_magic_cdaa20cad920f38e35d00092dfe731a5.pyx:15:76,\n",
-      "    ctruedivision = True,\n",
-      "    infix = True,\n",
-      "    operator = '/',\n",
-      "    result_is_used = True,\n",
-      "    truedivision = True,\n",
-      "    use_managed_ref = True)\n",
-      "File 'ExprNodes.py', line 11063, in analyse_operation: DivNode(_cython_magic_cdaa20cad920f38e35d00092dfe731a5.pyx:15:76,\n",
-      "    ctruedivision = True,\n",
-      "    infix = True,\n",
-      "    operator = '/',\n",
-      "    result_is_used = True,\n",
-      "    truedivision = True,\n",
-      "    use_managed_ref = True)\n",
-      "File 'ExprNodes.py', line 11244, in analyse_c_operation: DivNode(_cython_magic_cdaa20cad920f38e35d00092dfe731a5.pyx:15:76,\n",
-      "    ctruedivision = True,\n",
-      "    infix = True,\n",
-      "    operator = '/',\n",
-      "    result_is_used = True,\n",
-      "    truedivision = True,\n",
-      "    use_managed_ref = True)\n",
-      "File 'ExprNodes.py', line 11553, in compute_c_result_type: DivNode(_cython_magic_cdaa20cad920f38e35d00092dfe731a5.pyx:15:76,\n",
-      "    ctruedivision = True,\n",
-      "    infix = True,\n",
-      "    operator = '/',\n",
-      "    result_is_used = True,\n",
-      "    truedivision = True,\n",
-      "    use_managed_ref = True)\n",
-      "\n",
-      "Compiler crash traceback from this point on:\n",
-      "  File \"/home/diogo/miniconda3/lib/python3.7/site-packages/Cython/Compiler/ExprNodes.py\", line 11553, in compute_c_result_type\n",
-      "    widest_type = PyrexTypes.widest_numeric_type(type1, PyrexTypes.c_double_type)\n",
-      "  File \"/home/diogo/miniconda3/lib/python3.7/site-packages/Cython/Compiler/PyrexTypes.py\", line 4475, in widest_numeric_type\n",
-      "    elif type1.rank < type2.rank:\n",
-      "AttributeError: 'ErrorType' object has no attribute 'rank'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%cython \n",
     "coef_dim_gen_cache = {}\n",
@@ -808,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "85271375",
    "metadata": {},
    "outputs": [],
@@ -832,22 +462,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "09e79c77",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.422619070303209e-06\n",
-      "4.4226190703032085258188846727114800712975509045806693998919e-06\n",
-      "4.4226190703032085258188846727114800712975509045806693998919e-06\n",
-      "2.0627929499471315106275637414770452499708076260530982050714e-22\n",
-      "0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "expden = 100\n",
     "expnum = 1\n",
@@ -860,18 +478,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "bc541fa7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{(6, 2): 6.5, (6, 3): -17.875, (6, 4): 26.8125, (6, 5): -23.4609375, (6, 6): 11.73046875, (6, 7): -2.9326171875, (6, 8): 0.20947265625, (6, 9): 0.013092041015625, (6, 10): 0.0021820068359375, (6, 11): 0.000545501708984375, (6, 12): 0.0001735687255859375, (6, 13): 6.508827209472656e-05, (6, 14): 2.753734588623047e-05, (6, 15): 1.2785196304321289e-05, (6, 16): 6.3925981521606445e-06, (6, 17): 3.3960677683353424e-06, (6, 18): 1.8978025764226913e-06, (6, 19): 1.1070515029132366e-06, (6, 20): 6.700574886053801e-07, (6, 21): 4.1878593037836254e-07, (6, 22): 2.692195266718045e-07, (6, 23): 1.7744014257914387e-07, (6, 24): 1.195792265207274e-07, (6, 25): 8.221071823300008e-08, (6, 26): 5.7547502763100056e-08, (6, 27): 4.094726158143658e-08, (6, 28): 2.957302225325975e-08, (6, 29): 2.165167700685089e-08, (6, 30): 1.6052105367148073e-08, (6, 31): 1.2039079025361055e-08, (6, 32): 9.12639861599951e-09, (6, 33): 6.987398940374624e-09, (6, 34): 5.399353726653119e-09, (6, 35): 4.20831981636199e-09, (6, 36): 3.3065369985701347e-09, (6, 37): 2.6176751238680233e-09, (6, 38): 2.087065301462343e-09, (6, 39): 1.6751445182789857e-09, (6, 40): 1.353001341686873e-09, (6, 41): 1.0993135901205844e-09, (6, 42): 8.982196407082824e-10, (6, 43): 7.378232762960891e-10, (6, 44): 6.091331699653759e-10, (6, 45): 5.053036523576414e-10, (6, 46): 4.210863769647011e-10, (6, 47): 3.5243098941610857e-10, (6, 48): 2.961920017433253e-10, (6, 49): 2.499120014709307e-10, (6, 50): 2.1166016451109436e-10, (1, 2): -1.5, (1, 3): 0.375, (1, 4): 0.0625, (1, 5): 0.0234375, (1, 6): 0.01171875, (1, 7): 0.0068359375, (1, 8): 0.00439453125, (1, 9): 0.003021240234375, (1, 10): 0.0021820068359375, (1, 11): 0.001636505126953125, (1, 12): 0.0012645721435546875, (1, 13): 0.001001119613647461, (1, 14): 0.0008085966110229492, (1, 15): 0.0006642043590545654, (1, 16): 0.0005535036325454712, (1, 17): 0.0004670186899602413, (1, 18): 0.0003983394708484411, (1, 19): 0.0003430145443417132, (1, 20): 0.000297881051665172, (1, 21): 0.0002606459202070255, (1, 22): 0.0002296166439919034, (1, 23): 0.00020352384353827802, (1, 24): 0.00018140168663194345, (1, 25): 0.00016250567760778267, (1, 26): 0.0001462551098470044, (1, 27): 0.00013219211851556167, (1, 28): 0.00011995210754189856, (1, 29): 0.00010924209793994333, (1, 30): 9.982467570374132e-05, (1, 31): 9.150595272842954e-05, (1, 32): 8.41264404116207e-05, (1, 33): 7.755406225446284e-05, (1, 34): 7.167875450791262e-05, (1, 35): 6.640825785291905e-05, (1, 36): 6.166481086342484e-05, (1, 37): 5.738253233124255e-05, (1, 38): 5.350533420075319e-05, (1, 39): 4.998524642438785e-05, (1, 40): 4.678106396128606e-05, (1, 41): 4.3857247463705686e-05, (1, 42): 4.118302505738217e-05, (1, 43): 3.873165451825228e-05, (1, 44): 3.647981413928412e-05, (1, 45): 3.44070974268248e-05, (1, 46): 3.249559201422342e-05, (1, 47): 3.072952723084171e-05, (1, 48): 2.909497791005226e-05, (1, 49): 2.7579614477237035e-05, (1, 50): 2.6172491289622902e-05}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(coef_dim_gen_cache)"
    ]
